Fixes to alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,10 +27,12 @@
 
 .circle{
   position: absolute;
+  display: flex;
   border-radius: 50%;
   background: rgb(255, 255, 255);
   animation: ripple 15s infinite;
   box-shadow: 0px 0px 1px 0px #508fb9;
+  z-index: -100;
 }
 
 .small{
@@ -105,8 +107,20 @@
   }
 }
 
-.child {
 
-  margin: 0 auto;
+
+.vertical-center {
+margin-top: 200px;
 }
 
+
+
+
+@media (max-width: 500px) {
+  .circle{
+    display: none;
+  }
+  .vertical-center{
+    margin-top: auto;
+  }
+}
