--- a/src/app/login-form/login-form.component.css
+++ b/src/app/login-form/login-form.component.css
@@ -18,8 +18,8 @@
 
 .black-border {
   border: 2px solid black;
-  padding: 5%;
+  padding: 2%;
+  max-width: 500px;
 }
-.col-sm-8{
-  width: 800px;
-}
+
+
