--- a/src/app/registration-form/registration-form.component.css
+++ b/src/app/registration-form/registration-form.component.css
@@ -13,18 +13,9 @@ a
   font-weight: 800;
 }
 
-.my-center-element {
-   display: flex;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  overflow-x: hidden;
-}
 
 .black-border {
   border: 2px solid black;
-  padding: 5%;
+  padding: 2%;
+  max-width: 800px;
 }
